Fix banner spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -254,8 +254,7 @@
 
 .banner--text {
             position: relative;
-            top: 50%;
-            transform: translateY(-40%);
+            top: 20%;
             clip: rect(110px, 160px, 170px, 60px);
             }
 
